--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,15 +4,16 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>EA | Index</title>
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+    <title>资产管理系统 | 首页</title>
+<!--     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+ -->    <link th:href="@{webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet" />
     <link th:href="@{/font-awesome/css/font-awesome.css}" rel="stylesheet" />
     <link th:href="@{/css/plugins/awesome-bootstrap-checkbox/awesome-bootstrap-checkbox.css}" rel="stylesheet" />
     <link th:href="@{/css/plugins/toastr/toastr.min.css}" rel="stylesheet" />
     <link th:href="@{/css/plugins/sweetalert/sweetalert.css}" rel="stylesheet" />
     <link th:href="@{/css/plugins/jsTree/style.min.css}" rel="stylesheet" />
     <link th:href="@{/css/plugins/chosen/bootstrap-chosen.css}" rel="stylesheet" />
-    <link th:href="@{/css/plugins/datapicker/datepicker3.css}" rel="stylesheet" />
+    <link th:href="@{/css/plugins/datapicker/bootstrap-datepicker3.min.css}" rel="stylesheet" />
     <link th:href="@{/css/plugins/dualListbox/bootstrap-duallistbox.min.css}" rel="stylesheet" />
     <link th:href="@{/css/plugins/select2/select2.min.css}" rel="stylesheet" />
     <link th:href="@{/css/animate.css}" rel="stylesheet" />
@@ -26,10 +27,12 @@
 
     <script th:inline="javascript">
         //同步session数据
-        var baseUrl = [[${#httpServletRequest.getContextPath()}]];
-        var sessionUser = [[${session.user}]];
-        var sessionPermission = [[${session.permission}]];
-        var sessionRole = [[${session.role}]];
+        var baseUrl =/* [[${#httpServletRequest.getContextPath()}]]*/ "";
+        //alert(baseUrl);
+        var sessionUser = /*[[${session.user}]]*/ "";
+        var sessionPermission = /*[[${session.permission}]]*/ [];
+        var sessionRole = /*[[${session.role}]]*/ "";
+       // alert(sessionPermission)
     </script>
 
     <nav class="navbar-default navbar-static-side" role="navigation">
@@ -52,7 +55,8 @@
                         </ul>
                     </div>
                     <div class="logo-element">
-                        EA
+
+                       {{user.name}}
                     </div>
                 </li>
 
@@ -98,23 +102,24 @@
             <nav class="navbar navbar-static-top white-bg" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
                     <a class="navbar-minimalize minimalize-styl-2 btn btn-primary"><i class="fa fa-bars"></i> </a>
-                    <!--<form role="search" class="navbar-form-custom" method="post" action="#">
-                        <div class="form-group">
-                            <input type="text" placeholder="Search for something..." class="form-control" name="top-search" id="top-search" />
-                        </div>
-                    </form>-->
+
+
+
+
+
                 </div>
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
                         <a v-on:click="logout">
-                            <i class="fa fa-sign-out"></i> Log out
+                            <i class="fa fa-sign-out"></i>注销
+
+
+
+
+
                         </a>
                     </li>
-                    <li>
-                        <a class="right-sidebar-toggle">
-                            <i class="fa fa-tasks"></i>
-                        </a>
-                    </li>
+                    
                 </ul>
             </nav>
         </div>
@@ -126,51 +131,52 @@
         <!-- 尾部 -->
         <div class="footer">
             <div class="pull-right">
-                <!--10GB of <strong>250GB</strong>--> Free Forever.
+
+<!--               Free Forever.-->
             </div>
             <div>
-                <strong>Owner</strong> Mr.J &copy; 2017
+<!--                 <strong>Owner</strong> Mr.J &copy; 2017 -->
             </div>
         </div>
 
 
-        <div id="right-sidebar" class="animated">
-            <div class="sidebar-container">
 
-                <ul class="nav nav-tabs navs-3">
 
-                    <!--<li class="active"><a data-toggle="tab" href="#tab-1">
-                        Notes
-                    </a></li>-->
-                    <li class="active"><a data-toggle="tab" href="#tab-1">
-                        <i class="fa fa-gear"></i>
-                    </a></li>
-                </ul>
 
-                <div class="tab-content">
 
-                    <div id="tab-1" class="tab-pane active">
-                        <div class="sidebar-title">
-                            <h3><i class="fa fa-gears"></i> 网点设置</h3>
-                            <small><i class="fa fa-tim"></i> 设置您管理的网点</small>
-                        </div>
-                        <div id="sidebar-point-tree"></div>
-                        <!--<div class="setings-item"><span>Show notifications</span>
-                            <div class="switch">
-                                <div class="onoffswitch">
-                                    <input type="checkbox" name="collapsemenu" class="onoffswitch-checkbox" id="example" />
-                                    <label class="onoffswitch-label" for="example">
-                                        <span class="onoffswitch-inner"></span>
-                                        <span class="onoffswitch-switch"></span>
-                                    </label>
-                                </div>
-                            </div>
-                        </div>-->
 
-                    </div>
-                </div>
-            </div>
-        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </div>
 
@@ -196,7 +202,8 @@
                 </div>
                 <div class="col-sm-6">
                     <div class="form-group">
-                        <label>网点</label>
+
+                        <label>部门</label>
                         <div><p class="form-control-static">{{user.point.name}}</p></div>
                     </div>
                     <div class="form-group">
@@ -212,13 +219,22 @@
 
 <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
 <!-- Mainly scripts -->
-<script th:src="@{/js/main/jquery-2.1.1.js}"></script>
+ <script type='text/javascript'  th:src="@{'webjars/jquery/1.12.4/jquery.min.js'}"></script>
+ <script th:src="@{webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+ 
+
+  <script th:src="@{/js/main/vue.js}"></script> 
+ <script th:src="@{/js/main/vue-router.js}"></script> 
+<!--  <script th:src="@{webjars/vue/2.5.16/dist/vue.js}"></script>
+ <script th:src="@{webjars/vue-router/3.0.1/dist/vue-router.js}"></script>
+  -->
 <!--<script>if (typeof module === 'object') {window.jQuery = window.$ = module.exports;}</script>-->
-<script th:src="@{/js/main/bootstrap.min.js}"></script>
+
 <script th:src="@{/js/plugins/metisMenu/jquery.metisMenu.js}"></script>
 <script th:src="@{/js/plugins/slimscroll/jquery.slimscroll.min.js}"></script>
-<script th:src="@{/js/main/vue.js}"></script>
-<script th:src="@{/js/main/vue-router.js}"></script>
+
+
+
 <script th:src="@{/js/main/inspinia.js}"></script>
 
 <!-- plugins -->
@@ -230,10 +246,13 @@
 <script th:src="@{/js/plugins/jsTree/jstree.min.js}"></script>
 <script th:src="@{/js/plugins/chosen/chosen.jquery.js}"></script>
 <script th:src="@{/js/plugins/datapicker/bootstrap-datepicker.js}"></script>
+<script th:src="@{/js/plugins/datapicker/bootstrap-datepicker.zh-CN.min.js}"></script>
 <script th:src="@{/js/plugins/chartJs/Chart.min.js}"></script>
 <script th:src="@{/js/plugins/qrcode/jquery.qrcode.min.js}"></script>
 <script th:src="@{/js/plugins/dualListbox/jquery.bootstrap-duallistbox.js}"></script>
 <script th:src="@{/js/plugins/select2/select2.full.min.js}"></script>
+<script th:src="@{/js/plugins/select2/zh-CN.js}"></script>
+<script th:src="@{/js/plugins/print/jquery.jqprint-0.3.js}"></script>
 
 <!-- Custom javascript -->
 <script th:src="@{/js/shiro.js(_r=${#strings.randomAlphanumeric(5)})}"></script>
