--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EA | Login</title>
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+    <link th:href="@{webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet" />
     <link th:href="@{/font-awesome/css/font-awesome.css}" rel="stylesheet" />
     <link th:href="@{/css/plugins/toastr/toastr.min.css}" rel="stylesheet" />
     <link th:href="@{/css/animate.css}" rel="stylesheet" />
@@ -46,9 +46,9 @@
     </script>
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <!-- Mainly scripts -->
-    <script th:src="@{/js/main/jquery-2.1.1.js}"></script>
+<script type='text/javascript' th:src="@{'webjars/jquery/1.12.4/jquery.min.js'}"></script>
     <!--<script>if (typeof module === 'object') {window.jquery = window.jQuery = window.$ = module.exports;}</script>-->
-    <script th:src="@{/js/main/bootstrap.min.js}"></script>
+    <script th:src="@{webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
     <script th:src="@{/js/main/vue.js}"></script>
 
     <!-- plugins -->
